<resources>
    <string name="app_name">PokeTrivia</string>
    <string name="start">Start</string>
    <string name="title_activity_display_pokedex">DisplayPokedex</string>
    <string name="action_settings">Settings</string>
    <string name="pokemon_trivia">Pokemon Trivia</string>
    <string name="shop">Shop</string>
    <string name="play">Play</string>
    <string name="pokedex">PokeDex</string>
    <string name="unknown">UNKNOWN</string>
    <string name="legend_box">LEGEND BOX</string>
    <string name="_1000g">1000G</string>
    <string name="_500g">500G</string>
    <string name="ultra_box">ULTRA BOX</string>
    <string name="_250g">250G</string>
    <string name="rare_box">RARE BOX</string>
    <string name="common_box">COMMON BOX</string>
    <string name="_100g">100g</string>
    <string name="choose_a_generation_of_pokemon_to_view">Choose a Generation of Pokemon to View</string>
    <string name="generation_1">Generation 1</string>
    <string name="generation_2">Generation 2</string>
    <string name="generation_8">Generation 8</string>
    <string name="generation_7">Generation 7</string>
    <string name="generation_6">Generation 6</string>
    <string name="generation_5">Generation 5</string>
    <string name="generation_4">Generation 4</string>
    <string name="generation_3">Generation 3</string>
    <string name="_25_questions">25 Questions</string>
    <string name="_50_questions">50 Questions</string>
    <string name="_100_questions">100 Questions</string>
    <string name="how_many_questions_do_you_want">How Many Questions Do You Want?</string>
    <string name="_10_questions">10 Questions</string>
    <string name="you_will_not_get_partial_rewards_if_you_don_t_answer_all_the_questions_pick_at_your_own_risk">You will not get partial rewards if you don\'t answer all the questions.Pick at your own risk!</string>
</resources>
