<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayPlayOptions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        tools:layout_editor_absoluteX="-120dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/how_many_questions_do_you_want"
            android:textColor="#131010"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/hundred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="startGame"
            android:text="@string/_100_questions"
            app:layout_constraintEnd_toEndOf="@+id/fifty"
            app:layout_constraintStart_toStartOf="@+id/fifty"
            app:layout_constraintTop_toBottomOf="@+id/fifty" />

        <Button
            android:id="@+id/fifty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="startGame"
            android:text="@string/_50_questions"
            app:layout_constraintEnd_toEndOf="@+id/twentyfive"
            app:layout_constraintStart_toStartOf="@+id/twentyfive"
            app:layout_constraintTop_toBottomOf="@+id/twentyfive" />

        <Button
            android:id="@+id/twentyfive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="startGame"
            android:text="@string/_25_questions"
            app:layout_constraintEnd_toEndOf="@+id/ten"
            app:layout_constraintStart_toStartOf="@+id/ten"
            app:layout_constraintTop_toBottomOf="@+id/ten" />

        <Button
            android:id="@+id/ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="startGame"
            android:text="@string/_10_questions"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/you_will_not_get_partial_rewards_if_you_don_t_answer_all_the_questions_pick_at_your_own_risk"
            app:layout_constraintEnd_toEndOf="@+id/hundred"
            app:layout_constraintStart_toStartOf="@+id/hundred"
            app:layout_constraintTop_toBottomOf="@+id/hundred" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>