<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".DisplayShop">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-33dp">

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#A39F9F"
            android:text="@string/_100g"
            android:onClick="commonButton"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:strokeColor="#D4AF37"
            app:strokeWidth="10dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/common_box"
            android:textColor="#121010"
            app:layout_constraintBottom_toTopOf="@+id/button10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.082" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/rare_box"
            android:textColor="#151313"
            app:layout_constraintBottom_toTopOf="@+id/button11"
            app:layout_constraintEnd_toEndOf="@+id/button10"
            app:layout_constraintStart_toStartOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#3A4EE4"
            android:text="@string/_250g"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:strokeColor="#D4AF37"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/ultra_box"
            android:textColor="#171616"
            app:layout_constraintEnd_toEndOf="@+id/button11"
            app:layout_constraintStart_toStartOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#E80A0A"
            android:text="@string/_500g"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:strokeColor="#D4AF37"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#DDB021"
            android:text="@string/_1000g"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:strokeColor="#D4AF37"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/legend_box"
            android:textColor="#0E0D0D"
            app:layout_constraintEnd_toEndOf="@+id/button12"
            app:layout_constraintStart_toStartOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <TextView
            android:id="@+id/goldCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="48dp"
            android:background="#FFFFFF"
            android:textColor="#171616"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>